--- a/demo.html
+++ b/demo.html
@@ -21,7 +21,7 @@
     </div>
   </section>
   <script type="module">
-    import {loadScript, loadStylesheet} from "./ressource-loader.js";
+    import {loadScript, loadStylesheet} from "./load-ressources.js";
 
     function loadRessources() {
       return Promise.all([
